# simple-fastapi-boilerplate

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py
api/home/: __init__.py
api/sample/v1/: sample.py
api/sample/v1/request/: sample.py
api/sample/v1/response/: sample.py
app/: server.py
docker/api/: Dockerfile  startup.sh
